# thinros

./: .clang-format  .gitignore  CMakeLists.txt  FindKernelHeaders.cmake  README.md  requirements.txt
app/: CMakeLists.txt
app/ros/src/proxy/: CMakeLists.txt  package.xml
app/ros/src/proxy/src/: proxy.cpp  proxy_test.cpp
config/: dos-demo.trs  layer-flattening-demo.flt  layer-flattening-demo.trs  network-dos-demo.json  network-layer-flattening-demo.json  network-safety-controller.json  platform-rpi4b.json  platform-tx2.json
drv/: CMakeLists.txt  FindKernelHeaders.cmake  thinros.c  thinros_config.h  thinros_module.c
drv/plat/tx2/: patch-dts.sh
lib/: CMakeLists.txt  thinros_cfg.c  thinros_cfg.h  thinros_core.c  thinros_core.h  thinros_linux.c  thinros_linux.h  thinros_object.c  thinros_object.h  thinros_test.c
pythinros/: .gitignore  pythinros.py
test/: CMakeLists.txt  thinros_app.c  thinros_app_cpp.cc  thinros_app_helper.cc  thinros_app_udp.c  thinros_test.c
tests/: CMakeLists.txt  thinros_app.c  thinros_app_cpp.cc  thinros_app_helper.cc  thinros_app_udp.c  thinros_dos_demo_adv_controller.c  thinros_tcp_bridge.c  thinros_test.c  thinros_udp_bridge_helper.c  unit_thinros_object.cc
tools/: flatten-generator.py  flatten-parser.py  network-generator.py  network-parser.py  object-generator.py  parser.py  thinros_common.py  topic_gen.py
tools/schema/: platform.schema.json  topic.schema.json
tools/templates/: thinros_cfg.jinja2.c  thinros_cfg.jinja2.h  thinros_object_node_impl.jinja2.c  thinros_object_node_interface.jinja2.c  thinros_object_node_interface.jinja2.h
